<resources>
    <string name="app_name">TranSync</string>
    <string name="bus_icon_desc">Bus Icon</string>
    <string name="user_hint">Enter Email</string>
    <string name="pass_hint">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_info">Forgot Email/Password?</string>
    <string name="no_acc_button">Sign Up</string>
    <string name="no_acc_info">Don\'t Already Have an Account?</string>
    <string name="bus_pull_desc">Show Current Pass</string>
    <string name="main_menu_desc">Show Main Menu</string>
    <string name="err">Error</string>

    <string name="my_alerts">My Alerts</string>
    <string name="my_bus_passes">My Bus Passes</string>
    <string name="buy_a_pass">Purchase Bus Passes</string>
    <string name="my_routes">My Routes</string>
    <string name="all_routes">All Routes</string>
    <string name="route_map">Route Map</string>


    <string name="purchase_desc">Purchase a Bus Pass</string>

    <string name="daily"> \tDaily Pass</string>
    <string name="weekly"> \tWeekly Pass</string>
    <string name="monthly"> \tMonthly Pass</string>

    <string name="buy">Purchase</string>
    <string name="diff_pass">Choose a Different Pass</string>
    <string name="profile_sharing_consent">Profile Sharing Consent</string>
    <string name="future_payment_purchase">Future Payment Purchase</string>
    <string name="future_payment_consent">Future Payment Consent</string>
    <string name="buy_a_thing">Buy a Thing</string>
    <string name="incorrect_login_please_try_again">Incorrect Login, Please Try Again</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="displaybox">DisplayBox</string>
    <string name="first_name">First Name…</string>
    <string name="name">Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="last_name">Last Name…</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email…</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone Number…</string>
    <string name="enter_a_secure_password">Enter a Secure Password</string>
    <string name="create_a_password">Create a Password…</string>
    <string name="outline">outline</string>
    <string name="return_to_sign_in">Return to Sign In</string>
    <string name="recovery_email_sent">An email has been sent to the address you provided. Please follow the directions provided in the email to confirm your registration. Once confirmed, please return to the login page to proceed.</string>
    <string name="check_your_email">Check Your Email!</string>

    <string name="report_an_issue">Report An Issue</string>
    <string name="customer_service">For customer service help, please call: \n (XXX) XXX-XXXX</string>
    <string name="report_issue">Report an issue or change in a bus route:</string>
    <string name="type_hint">Type Here</string>
    <string name="report_text">Report</string>
    <string name="page_log_in_page_transync">__page_log_in_page__transync</string>
    <string name="internet_connection_is_not_available_please_try_again_when_you_have_a_signal">Internet Connection is Not Available, Please Try Again When You Have a Signal</string>
    <string name="indygo">IndyGo</string>
    <string name="qrholder">QRHolder</string>
    <string name="spinner_holder">spinner_holder</string>
    <string name="countholder">countHolder</string>
    <string name="qrcode">QRCode</string>
    <string name="select_an_active_pass">Currently Active Pass:</string>
    <string name="regEmail">Email</string>
    <string name="reg_phone_number">Phone Number</string>
    <string name="reg_last_name">Last Name</string>
    <string name="reg_first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_make_sure_passwords_match">Please Make Sure Passwords Match</string>
    <string name="please_enter_all_information">Please Enter All Information</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="no_pass_notif">You do not currently have a pass, please buy one first.</string>
    <string name="report_succ">Thank you! Your issue has been recorded and is being verified. Press the button below to return to the main menu.</string>
    <string name="route_alerts">Route Alerts</string>
    <string name="add_my_routes">Add to \"My Routes\"</string>
    <string name="time_label">Time:</string>
    <string name="date_label">Date:</string>
    <string name="bus_number_label">Bus #:</string>
    <string name="route_label">Route:</string>
    <string name="select_one">Select One:</string>

    <string name="recover_pass">Recover Password</string>
    <string name="return_login">Return to Log-in Page</string>
    <string name="newAccount">Create a New Account</string>
    <string name="unrecognized_text">Unrecognized email. \n Create a new account?</string>
    <string name="check_email">Verify Email</string>
    <string name="recognized_text">Account found! \n Press the button to recover your password.</string>
    <string name="recovery_string">An email has been sent to the address of the account. Please follow the provided instructions to reset your password and return to the Log-in page in order to sign in to the app.</string>
    <string name="title_activity_maps">Map</string>
    <string name="remove_my_routes">Remove from \"My Routes\"</string>
</resources>