<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="287dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:autofillHints="false"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/user_hint"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotText" />

    <TextView
        android:id="@+id/forgotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_info"
        android:textColor="@color/bus_icon_background"
        app:layout_constraintStart_toStartOf="@+id/emailBox"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recoveryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorOrange"
        android:text="@string/recover_pass"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/emailBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailBox"
        app:layout_constraintTop_toBottomOf="@+id/checkButton" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@color/colorGreen"
        android:text="@string/check_email"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/emailBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailBox"
        app:layout_constraintTop_toBottomOf="@+id/emailBox" />

    <Button
        android:id="@+id/newAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorOrange"
        android:text="@string/newAccount"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/emailBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailBox"
        app:layout_constraintTop_toBottomOf="@+id/checkButton" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/colorGreen"
        android:text="@string/return_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/emailBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailBox"
        app:layout_constraintTop_toBottomOf="@+id/newAccountButton" />

    <TextView
        android:id="@+id/recognizedEmailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/recognized_text"
        android:textAlignment="center"
        android:textColor="@color/colorOrange"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/checkButton"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/checkButton"
        app:layout_constraintTop_toBottomOf="@+id/emailBox" />

    <TextView
        android:id="@+id/unrecognizedEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/unrecognized_text"
        android:textAlignment="center"
        android:textColor="@color/colorOrange"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/checkButton"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/checkButton"
        app:layout_constraintTop_toBottomOf="@+id/emailBox" />

    <TextView
        android:id="@+id/recoveryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/green_rectangle"
        android:padding="8dp"
        android:text="@string/recovery_string"
        android:textAlignment="viewStart"
        android:textColor="@color/bus_icon_background"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/returnButton"
        app:layout_constraintStart_toStartOf="@+id/returnButton"
        app:layout_constraintTop_toBottomOf="@+id/returnButton" />

</androidx.constraintlayout.widget.ConstraintLayout>