<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/top_back"
        android:layout_width="417dp"
        android:layout_height="153dp"
        android:layout_marginBottom="578dp"
        android:background="@drawable/grey_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/my_alert_button"
        android:layout_width="234dp"
        android:layout_height="47dp"
        android:layout_marginBottom="387dp"
        android:layout_marginTop="280dp"
        android:background="#C2EA79"
        android:text="@string/my_alerts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/my_pass_button"
        android:layout_width="234dp"
        android:layout_height="48dp"
        android:layout_marginBottom="320dp"
        android:layout_marginTop="340dp"
        android:background="#47978B"
        android:text="@string/my_bus_passes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buy_pass_button"
        android:layout_width="234dp"
        android:layout_height="53dp"
        android:layout_marginBottom="267dp"
        android:layout_marginTop="390dp"
        android:background="#47978B"
        android:text="@string/buy_a_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/my_routes_button"
        android:layout_width="234dp"
        android:layout_height="53dp"
        android:layout_marginBottom="217dp"
        android:layout_marginTop="461dp"
        android:background="#e26944"
        android:text="@string/my_routes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/all_routes_button"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:layout_marginBottom="145dp"
        android:layout_marginTop="505dp"
        android:background="#e26944"
        android:text="@string/all_routes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/report_button"
        android:layout_width="233dp"
        android:layout_height="46dp"
        android:layout_marginTop="620dp"
        android:layout_marginBottom="30dp"
        android:background="#C2EA79"
        android:text="@string/report_an_issue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/route_map_button"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:layout_marginBottom="96dp"
        android:layout_marginTop="555dp"
        android:background="#e26944"
        android:text="@string/route_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/passButton"
        android:layout_width="82dp"
        android:layout_height="68dp"
        android:layout_marginBottom="613dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="301dp"
        android:layout_marginTop="16dp"
        android:background="#3A3B3E"
        android:contentDescription="@string/bus_pull_desc"
        android:src="@drawable/buspull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/newbus"
        android:layout_width="68dp"
        android:layout_height="96dp"
        android:contentDescription="@string/bus_icon_desc"
        android:src="@drawable/newbus"
        app:layout_constraintBottom_toTopOf="@+id/top_back"
        app:layout_constraintEnd_toStartOf="@+id/top_back"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/top_back"
        app:layout_constraintTop_toBottomOf="@+id/top_back"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="109dp"
        android:layout_height="16dp"
        android:layout_marginBottom="597dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="118dp"
        android:text="@string/bus_pull_desc"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/nameDisplay"
        android:layout_width="316dp"
        android:layout_height="46dp"
        android:layout_marginBottom="527dp"
        android:layout_marginTop="158dp"
        android:text="@string/err"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texttimedisp"
        android:layout_width="246dp"
        android:layout_height="46dp"
        android:layout_marginBottom="463dp"
        android:layout_marginTop="235dp"
        android:text="@string/err"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/time_disp"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_marginBottom="460dp"
        android:layout_marginTop="215dp"
        android:background="@drawable/blue_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>