<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    android:contentDescription="@string/spinner_holder">

    <View
        android:id="@+id/top_back4"
        android:layout_width="417dp"
        android:layout_height="153dp"
        android:layout_marginBottom="578dp"
        android:background="@drawable/grey_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/typeIssueHere"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@color/bus_icon_background"
        android:ems="10"
        android:foreground="@drawable/blue_rectangle"
        android:gravity="start|top"
        android:hint="@string/type_hint"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/reportButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueSpinner" />

    <ImageButton
        android:id="@+id/passButton"
        android:layout_width="82dp"
        android:layout_height="68dp"
        android:layout_marginStart="293dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="613dp"
        android:background="#3A3B3E"
        android:contentDescription="@string/bus_pull_desc"
        android:src="@drawable/buspull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/menubutton"
        android:layout_width="87dp"
        android:layout_height="62dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="613dp"
        android:background="#3A3B3E"
        android:contentDescription="@string/main_menu_desc"
        android:src="@drawable/menu_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/newbus4"
        android:layout_width="68dp"
        android:layout_height="96dp"
        android:layout_marginStart="171dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="550dp"
        android:contentDescription="@string/bus_icon_desc"
        android:src="@drawable/newbus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/issueSpinner"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/bus_icon_background"
        android:entries="@array/problemTypes"
        android:foreground="@drawable/blue_rectangle"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeSpinner" />

    <Spinner
        android:id="@+id/routeSpinner"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/bus_icon_background"
        android:entries="@array/route_names"
        android:foreground="@drawable/blue_rectangle"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportIssue" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="109dp"
        android:layout_height="16dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="597dp"
        android:text="@string/main_menu_desc"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="109dp"
        android:layout_height="16dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="597dp"
        android:text="@string/bus_pull_desc"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/reportTitle"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/bus_icon_background"
        android:foreground="@drawable/blue_rectangle"
        android:padding="5dp"
        android:text="@string/report_an_issue"
        android:textAlignment="center"
        android:textColor="@color/colorBlue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_back4" />

    <TextView
        android:id="@+id/customerService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/customer_service"
        android:textAlignment="center"
        android:textColor="#2D2D2D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportTitle" />

    <TextView
        android:id="@+id/reportIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/report_issue"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerService" />

    <Button
        android:id="@+id/reportButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/colorBlue"
        android:text="@string/report_text"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/reportSuccText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/report_succ"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/typeIssueHere"
        app:layout_constraintEnd_toEndOf="@+id/typeIssueHere"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/typeIssueHere"
        app:layout_constraintTop_toBottomOf="@+id/reportIssue" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBlue"
        android:text="@string/main_menu_desc"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/reportButton"
        app:layout_constraintEnd_toEndOf="@+id/reportButton"
        app:layout_constraintStart_toStartOf="@+id/reportButton"
        app:layout_constraintTop_toTopOf="@+id/reportButton" />

</androidx.constraintlayout.widget.ConstraintLayout>